--- a/My Cyber.html
+++ b/My Cyber.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html lang="en">
-<link rel="icon" href="Cyber boy.png" type="image/png">
+<link rel="icon" href="jv.jpg" type="image/jpeg">
 <head>
-  <button id="theme-toggle" class="btn ghost">🌓</button>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Jayavijay | Cybersecurity Portfolio</title>
   <meta name="description" content="Cybersecurity portfolio of Jayavijay — TryHackMe progress, badges, completed rooms, and skills matrix." />
